--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,7 @@
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>5.1.0</version>
                     </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter</artifactId>
-                        <version>5.6.2</version>
-                        <scope>test</scope>
-                 </dependency>
+
                 </dependencies>
             </plugin>
         </plugins>
@@ -69,6 +64,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+        </dependency>
     </dependencies>
 
 </project>
