--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                                 </manifest>
                             </archive>
                             <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                                <descriptorRef>romo</descriptorRef>
                             </descriptorRefs>
                         </configuration>
                     </execution>
