--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,43 +6,33 @@ on:
  pull_request:
     branches: [ master ]
 
+env:
+  build-number: ${GITHUB_RUN_NUMBER}
+
 jobs:
-  build_and_test:
-
+  build:
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 14
-      uses: actions/setup-java@v1
-      with:
-        java-version: 14
-
-    - name: Cache the Maven packages to speed up build
-      uses: actions/cache@v1
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-
-    - name: Build project with Maven
-      run: mvn -B package --file pom.xml
-
-  publish-job:
-    runs-on: ubuntu-latest
-    needs: [build_and_test]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: 14
-      - run: mvn -B package --file pom.xml -DskipTests
-      - run: mkdir staging && cp target/romo.jar staging
+          java-version: '11'
+          distribution: 'temurin'
+          cache: 'maven'
+      - run: mvn clean package -DskipTests
+      - run: mkdir staging && mv target/yb-workload-sim.jar target/yb-workload-sim-${{ env.build-number }}.jar && cp target/*.jar staging
       - uses: actions/upload-artifact@v3
         with:
           name: Package
           path: staging
-
+          retention-days: 1
+      - uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: "${{ secrets.YOUR-GITHUB-TOKEN }}"
+          automatic_release_tag: "${{ github.run_number }}"
+          title: "Automated Build ${{ github.run_number }}"
+          prerelease: true
+          files: staging/*.jar
 
 
 
