--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,22 @@
 name: Maven CI/CD
 
 on:
- push:
+  push:
     branches: [ master ]
- pull_request:
+  pull_request:
     branches: [ master ]
-
-env:
-  build-number: ${GITHUB_RUN_NUMBER}
 
 jobs:
-  build:
+  build_and_test:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: 'maven'
-      - run: mvn clean package -DskipTests
-      - run: mkdir staging && mv target/romo.jar target/yb-workload-sim-${{ env.build-number }}.jar && cp target/*.jar staging
-      - uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: staging
-          retention-days: 1
-      - uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: "${{ secrets.YOUR-GITHUB-TOKEN }}"
-          automatic_release_tag: "${{ github.run_number }}"
-          title: "Automated Build ${{ github.run_number }}"
-          prerelease: true
-          files: staging/*.jar
+    - uses: actions/checkout@v2
+    - name: Set up JDK 14
+      uses: actions/setup-java@v1
+      with:
+        java-version: 14
 
-
-
-
-
+    - name: Build project with Maven
+      run: mvn -B package --file pom.xml
